objects/cnx__Connects_Configuration_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>cnx__Assigned_Connects_Configuration__c</fullName>
        <label>b+s Configuration</label>
        <referenceTo>cnx__Connects_Configuration__c</referenceTo>
        <relationshipName>Connects_Configuration_Assignment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cnx__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connects_Configuration_User_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnx__Full_Name__c</fullName>
        <formula>cnx__Assigned_User__r.FirstName + &apos; &apos; +  cnx__Assigned_User__r.LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Profile__c</fullName>
        <formula>cnx__Assigned_User__r.Profile.Name</formula>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Role__c</fullName>
        <formula>cnx__Assigned_User__r.UserRole.Name</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Username__c</fullName>
        <formula>cnx__Assigned_User__r.Username</formula>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>b+s Configurations Assigned User</label>
    <listViews>
        <fullName>cnx__All</fullName>
        <columns>NAME</columns>
        <columns>cnx__Assigned_User__c</columns>
        <columns>cnx__Assigned_Connects_Configuration__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cnx__Assigned_User__c</field>
            <operation>equals</operation>
            <value>Brian Aanestad</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cnx__ViewAllAssignments</fullName>
        <columns>cnx__Assigned_Connects_Configuration__c</columns>
        <columns>cnx__Assigned_User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>View All Assignments</label>
    </listViews>
    <nameField>
        <displayFormat>CNXA-{000000}</displayFormat>
        <label>b+s Configuration Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>b+s Configurations Assigned Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>